2016-09-28  c.hetherington  <cth@carlh.net>

	* Fix crash on "report a problem" in the KDM creator.

2016-09-27  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2016-09-26  c.hetherington  <cth@carlh.net>

	* Disallow refer-to-DCP if the video frame size is different to that in the project (#963).

	* Fix multi-select in the timeline (#954).

	* Add option to Windows installer to add desktop shortcuts (#965).

	* Updated zh_CN translation from 刘汉源.

2016-09-26  c.hetherington  <cth@carlh.net>

	* Don't re-use J2K data if it's the wrong size (#964).

2016-09-23  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.27 released.

2016-09-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.26 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>

	* Add confirm dialogue for job cancellation.

	* Version 2.9.25 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.24 released.

2016-09-21  Carl Hetherington  <cth@carlh.net>

	* Fix trimming of OV DCPs that are referred to (#956).

2016-09-20  Carl Hetherington  <cth@carlh.net>

	* Give better errors on SubRip parse failures.

	* Version 2.9.23 released.

2016-09-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.22 released.

2016-09-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.21 released.

2016-09-07  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2016-08-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.20 released.

2016-08-30  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-08-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.19 released.

2016-08-28  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.9.18 released.

2016-08-28  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-08-27  Carl Hetherington  <cth@carlh.net>
