@@ -109,7 +109,7 @@ public:
 		s->Add (panel, 1, wxEXPAND);
 		SetSizer (s);
 
-		JobManagerView* job_manager_view = new JobManagerView (panel);
+		JobManagerView* job_manager_view = new JobManagerView (panel, false);
 		_sizer->Add (job_manager_view, 1, wxALL | wxEXPAND, 6);
 
 		wxSizer* buttons = new wxBoxSizer (wxHORIZONTAL);
