@@ -35,7 +35,7 @@ class JobView;
 class JobManagerView : public wxScrolledWindow
 {
 public:
-	JobManagerView (wxWindow *);
+	JobManagerView (wxWindow *, bool latest_at_top);
 
 private:
 	void job_added (boost::weak_ptr<Job>);
@@ -44,6 +44,7 @@ private:
 	wxPanel* _panel;
 	wxFlexGridSizer* _table;
 	boost::shared_ptr<wxTimer> _timer;
+	bool _latest_at_top;
 
 	std::list<boost::shared_ptr<JobView> > _job_records;
 };
