@@ -26,7 +26,7 @@ using boost::shared_ptr;
 JobViewDialog::JobViewDialog (wxWindow* parent, wxString title, shared_ptr<Job> job)
 	: TableDialog (parent, title, 4, 0, false)
 {
-	_view = new JobView (job, this, this, _table);
+	_view = new JobView (job, this, this, _table, true);
 	layout ();
 	SetMinSize (wxSize (960, -1));
 
